--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
 	<section>
 	<iframe src="https://www.atlistmaps.com/map/0e8d80dd-4ab9-4c6b-ba55-4688b864cb5a?share=true" allow="geolocation" width="100%" height="400px" frameborder="0" scrolling="no" allowfullscreen></iframe>
 	</section>
-
+<section>
 	<img src="images/img.jpg">
+	</section>
 
 	<iframe src="https://www.facebook.com/plugins/share_button.php?href=https%3A%2F%2Fanirevazzz.github.io%2Fdavaleba5%2F&layout=button_count&size=small&width=77&height=20&appId" width="77" height="20" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
 
