ჩავასწორე ტექსტი და fb-og:tags

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<h1>გამარჯობა</h1>
 	<br>
 	<article> <p>ამ რუკაზე ასახულია ის ლოკაციები სადაც ჩემი ცხოვრების უმეტესი ნაწილი მაქვს გატარებული</p>
-		<p>უნდა აღინიშნოს, რომ ჯიპაში ონლაინობის გამო, ბევრი დროც არ მაქვს გატარებული.</p>
+		<p>უნდა აღინიშნოს, რომ ჯიპაში ონლაინობის გამო, ბევრი დროც არ მაქვს გატარებული</p>
 	</article>
 	<br> <br> <br> <br>
 	<section>
